--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "responsive portfolio",
   "main": "index.js",
-  "homepage": "https://NipuniKodithuwakku.github.io/my-portfolio-sass",
+  "homepage": "https://nipunikodithuwakku.github.io/my-portfolio-sass/",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
